--- a/.github/workflows/neocities.yaml
+++ b/.github/workflows/neocities.yaml
@@ -1,11 +1,12 @@
 name: Deploy to neocities
 
+# only run on changes to main. Use main or master depending on whatever your default branch is called.
 on:
   push:
     branches:
-      - main # trigger this action only with commits on the 'main' branch.
+      - main
 
-concurrency: # prevent concurrent deploys doing starnge things
+concurrency: # prevent concurrent deploys doing strange things
   group: deploy-to-neocities
   cancel-in-progress: true
 
@@ -14,10 +15,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Deploy to neocities # You can customize this if you want
-      uses: bcomnes/deploy-to-neocities@master
+    # The checkout step copies your repo into the action runner. Important!
+    - uses: actions/checkout@v4
+    # Set up any tools and build steps here
+    # This example uses a Node.js toolchain to build a site
+    # If you don't need Node.js to build your site, you can omit this.
+    - name: Use Node.js
+      uses: actions/setup-node@v4
       with:
-        api_token: ${{ secrets.NEOCITIES_API_TOKEN }}
-        cleanup: true # true: delete neocities files that doesn't exist on the repo. false: ignore these files
-        dist_dir: public #the folder in which the site is
+        node-version: lts/*
+    # If you have a different build process, replace this with your own build steps
+    - name: Install deps and build
+      run: |
+        npm i
+        npm run build
+    # When the dist_dir is ready, deploy it to neocities
+    # Here we deploy the folder named `public`
+    - name: Deploy to neocities
+      uses: bcomnes/deploy-to-neocities@v3
+      with:
+        api_key: ${{ secrets.NEOCITIES_API_TOKEN }}
+        cleanup: false
+        neocities_supporter: false # set this to true if you have a supporter account and want to bypass unsuported files filter.
+        preview_before_deploy: true # print a deployment plan prior to waiting for files to upload.
+        dist_dir: public
